// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN buildHeaders (default executor providers) > 9router → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > 360ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > adapta-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > adobe-firefly → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agentrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agnes → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agy → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "antigravity/cli/1.1.5 (aidev_client; os_type=darwin; arch=arm64; auth_method=consumer)",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "antigravity/cli/1.1.5 (aidev_client; os_type=darwin; arch=arm64; auth_method=consumer)",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "antigravity/cli/1.1.5 (aidev_client; os_type=darwin; arch=arm64; auth_method=consumer)",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ai21 → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > aihorde → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > aimlapi → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ainative → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > aion → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alibaba → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alibaba-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alicode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alicode-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alims-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alitp-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > amazon-q → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "AWS-SDK-JS/3.0.0 kiro-ide/1.0.0",
    "X-Amz-User-Agent": "aws-sdk-js/3.0.0 kiro-ide/1.0.0",
  },
  "nonStream": {
    "Accept": "application/vnd.amazon.eventstream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "AWS-SDK-JS/3.0.0 kiro-ide/1.0.0",
    "X-Amz-User-Agent": "aws-sdk-js/3.0.0 kiro-ide/1.0.0",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "AWS-SDK-JS/3.0.0 kiro-ide/1.0.0",
    "X-Amz-User-Agent": "aws-sdk-js/3.0.0 kiro-ide/1.0.0",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ant-ling → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > anthropic → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > anyapi → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > api-airforce → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > arcee-ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > assemblyai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > auggie → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > auriko → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > auto → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > azure-ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > azure-openai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > baichuan → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > baidu → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bailian-coding-plan → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > baseten → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bazaarlink → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bedrock → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > blackbox → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > blackbox-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Content-Type": "application/json",
    "Cookie": "<CRED>",
  },
  "nonStream": {
    "Content-Type": "application/json",
    "Cookie": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Content-Type": "application/json",
    "Cookie": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bluesminds → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > byteplus → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nanobanana → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nebius → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nvidia → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ollama → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > perplexity → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > perplexity-agent → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > poolside → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > sambanova → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > siliconflow → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > tencent → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > together → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > tokenrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > venice → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > vercel-ai-gateway → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > volcengine-ark → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xiaomi-mimo → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > zed → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
  "nonStream": {
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
    "content-type": "application/json",
  },
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alims-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
  "stream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alitp-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://token-plan.ap-southeast-1.maas.aliyuncs.com/compatible-mode/v1/chat/completions",
  "stream": "https://token-plan.ap-southeast-1.maas.aliyuncs.com/compatible-mode/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > anthropic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages",
  "stream": "https://api.anthropic.com/v1/messages",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > api-airforce → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.airforce/v1/chat/completions",
  "stream": "https://api.airforce/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > assemblyai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.assemblyai.com/v1/audio/transcriptions",
  "stream": "https://api.assemblyai.com/v1/audio/transcriptions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > baidu → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://qianfan.baidubce.com/v2/chat/completions",
  "stream": "https://qianfan.baidubce.com/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > bazaarlink → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://bazaarlink.ai/api/v1/chat/completions",
  "stream": "https://bazaarlink.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > blackbox → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.blackbox.ai/v1/chat/completions",
  "stream": "https://api.blackbox.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > bluesminds → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.bluesminds.com/v1/chat/completions",
  "stream": "https://api.bluesminds.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > byteplus → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
  "stream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cerebras → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cerebras.ai/v1/chat/completions",
  "stream": "https://api.cerebras.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > chutes → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.chutes.ai/v1/chat/completions",
  "stream": "https://llm.chutes.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > claude → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages?beta=true",
  "stream": "https://api.anthropic.com/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cline → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cline.bot/api/v1/chat/completions",
  "stream": "https://api.cline.bot/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > clinepass → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cline.bot/api/v1/chat/completions",
  "stream": "https://api.cline.bot/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cloudflare-ai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
  "stream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://copilot.tencent.com/v2/chat/completions",
  "stream": "https://copilot.tencent.com/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.codebuddy.ai/v2/chat/completions",
  "stream": "https://www.codebuddy.ai/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cohere → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cohere.ai/v1/chat/completions",
  "stream": "https://api.cohere.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepgram → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepgram.com/v1/listen",
  "stream": "https://api.deepgram.com/v1/listen",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepseek → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepseek.com/chat/completions",
  "stream": "https://api.deepseek.com/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > featherless → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.featherless.ai/v1/chat/completions",
  "stream": "https://api.featherless.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > fireworks → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.fireworks.ai/inference/v1/chat/completions",
  "stream": "https://api.fireworks.ai/inference/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gemini → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:generateContent",
  "stream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:streamGenerateContent?alt=sse",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gitlab → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://gitlab.com/api/v4/chat/completions",
  "stream": "https://gitlab.com/api/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
  "stream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
  "stream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > grok-cli → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://cli-chat-proxy.grok.com/v1/responses",
  "stream": "https://cli-chat-proxy.grok.com/v1/responses",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > groq → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.groq.com/openai/v1/chat/completions",
  "stream": "https://api.groq.com/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > hyperbolic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.hyperbolic.xyz/v1/chat/completions",
  "stream": "https://api.hyperbolic.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kilo-gateway → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kilo.ai/api/gateway/chat/completions",
  "stream": "https://api.kilo.ai/api/gateway/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kilocode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kilo.ai/api/openrouter/chat/completions",
  "stream": "https://api.kilo.ai/api/openrouter/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimchi → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.kimchi.dev/openai/v1/chat/completions",
  "stream": "https://llm.kimchi.dev/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kimi.com/coding/v1/messages?beta=true",
  "stream": "https://api.kimi.com/coding/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > llm7 → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.llm7.io/v1/chat/completions",
  "stream": "https://api.llm7.io/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mistral → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.mistral.ai/v1/chat/completions",
  "stream": "https://api.mistral.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > morph → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.morphllm.com/v1/chat/completions",
  "stream": "https://api.morphllm.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nanobanana → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.nanobananaapi.ai/v1/chat/completions",
  "stream": "https://api.nanobananaapi.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nebius → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.studio.nebius.ai/v1/chat/completions",
  "stream": "https://api.studio.nebius.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nvidia → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://integrate.api.nvidia.com/v1/chat/completions",
  "stream": "https://integrate.api.nvidia.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > ollama → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ollama.com/api/chat",
  "stream": "https://ollama.com/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.openai.com/v1/chat/completions",
  "stream": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://openrouter.ai/api/v1/chat/completions",
  "stream": "https://openrouter.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > perplexity → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.perplexity.ai/chat/completions",
  "stream": "https://api.perplexity.ai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > perplexity-agent → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.perplexity.ai/v1/responses",
  "stream": "https://api.perplexity.ai/v1/responses",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > poolside → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://inference.poolside.ai/v1/chat/completions",
  "stream": "https://inference.poolside.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > sambanova → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.sambanova.ai/v1/chat/completions",
  "stream": "https://api.sambanova.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > siliconflow → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.siliconflow.com/v1/chat/completions",
  "stream": "https://api.siliconflow.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > tencent → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.hunyuan.cloud.tencent.com/v1/chat/completions",
  "stream": "https://api.hunyuan.cloud.tencent.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > together → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.together.xyz/v1/chat/completions",
  "stream": "https://api.together.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > tokenrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.tokenrouter.com/v1/chat/completions",
  "stream": "https://api.tokenrouter.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > venice → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.venice.ai/api/v1/chat/completions",
  "stream": "https://api.venice.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > vercel-ai-gateway → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ai-gateway.vercel.sh/v1/chat/completions",
  "stream": "https://ai-gateway.vercel.sh/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > volcengine-ark → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
  "stream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.x.ai/v1/chat/completions",
  "stream": "https://api.x.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xiaomi-mimo → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/v1/chat/completions",
  "stream": "https://api.xiaomimimo.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > zed → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://cloud.zed.dev/completions",
  "stream": "https://cloud.zed.dev/completions",
}
`;
